--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,11 @@
 version: "3"
 services:
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+    volumes:
+      - redis_data:/data
   postgres:
     image: postgres:13.2
     environment:
@@ -9,6 +15,9 @@ services:
       - local
     ports:
       - 5432:5432
+
+volumes:
+  redis_data:
 
 networks:
   local:
