--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
     "typescript": "^5"
   },
   "optionalDependencies": {
+    "bullmq": "^4.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
+    "nanoid": "^5.0.4",
+    "node-cron": "^3.0.3",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4"
